--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "serve": "webpack-dev-server --content-base dist/ --inline"
   },
   "devDependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "nodeunit": "^0.9.1",
